{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 1836,
  "lineage": "6ffaaee5-dba8-1515-f605-81e0f27c1d7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_load_balancer_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042c5db3708e7bd2f",
            "association_id": "eipassoc-02a17e1188d392907",
            "domain": "vpc",
            "id": "eipalloc-042c5db3708e7bd2f",
            "instance": "i-0e8927c13bde0393d",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-097f577e296973fca",
            "private_dns": "ip-10-0-1-125.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-15-220-241-217.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-load-balancer-eip"
            },
            "tags_all": {
              "Name": "app-load-balancer-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_load_balancer",
            "aws_internet_gateway.ig",
            "aws_security_group.app_load_balancer_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_host_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cab56fa1a3239809",
            "association_id": "eipassoc-033e7ba8f618dd08c",
            "domain": "vpc",
            "id": "eipalloc-0cab56fa1a3239809",
            "instance": "i-0a50fedcc61e7cb4b",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-066bd13b970ea8da7",
            "private_dns": "ip-10-0-1-231.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-15-220-241-212.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion-host-eip"
            },
            "tags_all": {
              "Name": "bastion-host-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion_host",
            "aws_internet_gateway.ig",
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf71e61dc8099854",
            "association_id": "eipassoc-01689e38e57194ec7",
            "domain": "vpc",
            "id": "eipalloc-0bf71e61dc8099854",
            "instance": "i-0fcbe37fc0a640451",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-0013b230791b1872d",
            "private_dns": "ip-10-0-1-123.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.123",
            "public_dns": "ec2-15-220-241-213.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-gateway-eip"
            },
            "tags_all": {
              "Name": "nat-gateway-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_internet_gateway.ig",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_load_balancer_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfd631f7ec3cda79",
            "association_id": "eipassoc-09c67e32d3e17c189",
            "domain": "vpc",
            "id": "eipalloc-0dfd631f7ec3cda79",
            "instance": "i-071b746c2048500ad",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-0e6952c0200f44c08",
            "private_dns": "ip-10-0-1-202.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-15-220-241-19.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.19",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "web-load-balancer-eip"
            },
            "tags_all": {
              "Name": "web-load-balancer-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web_load_balancer",
            "aws_internet_gateway.ig",
            "aws_security_group.web_load_balancer_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0e8927c13bde0393d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8927c13bde0393d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-097f577e296973fca",
            "private_dns": "ip-10-0-1-125.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-066131092c6ae3122",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fab8becf4629f344"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0636ee283b755af4d",
            "tags": {
              "Name": "app_load_balancer"
            },
            "tags_all": {
              "Name": "app_load_balancer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fab8becf4629f344"
            ]
          },
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0f90600b2b9110d87",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f90600b2b9110d87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c4d54133263bc90",
            "private_dns": "ip-10-0-3-100.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-090ff20709575d586",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0be87f3fdca5373d8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "appserver-1"
            },
            "tags_all": {
              "Name": "appserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be87f3fdca5373d8"
            ]
          },
          "dependencies": [
            "aws_security_group.app_server_sg",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-075a084819478dd1b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075a084819478dd1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-092186c6147fc1990",
            "private_dns": "ip-10-0-4-100.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0b2c24bb7c4890e2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0be87f3fdca5373d8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea",
            "tags": {
              "Name": "appserver-2"
            },
            "tags_all": {
              "Name": "appserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be87f3fdca5373d8"
            ]
          },
          "dependencies": [
            "aws_security_group.app_server_sg",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0a50fedcc61e7cb4b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a50fedcc61e7cb4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066bd13b970ea8da7",
            "private_dns": "ip-10-0-1-231.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-01792dd767a78cdff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04d21be2957721310"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0636ee283b755af4d",
            "tags": {
              "Name": "bastionhost-server"
            },
            "tags_all": {
              "Name": "bastionhost-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d21be2957721310"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-01c715f0f67431a84",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c715f0f67431a84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d1fb977f3db2753c",
            "private_dns": "ip-10-0-3-11.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0b4ca59c34e3b0dc5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d119a0b0d31fb5a2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "db_load_balancer"
            },
            "tags_all": {
              "Name": "db_load_balancer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d119a0b0d31fb5a2"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.db_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0e7deec6f971edab0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7deec6f971edab0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2a3565470d8d8ab",
            "private_dns": "ip-10-0-3-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0c6a314577c7f3c97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d119a0b0d31fb5a2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "dbserver-1"
            },
            "tags_all": {
              "Name": "dbserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d119a0b0d31fb5a2"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.db_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0493d74aad2d87584",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0493d74aad2d87584",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b95e7dacb982a386",
            "private_dns": "ip-10-0-4-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-061a7ca21b4ea845d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d119a0b0d31fb5a2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea",
            "tags": {
              "Name": "dbserver-2"
            },
            "tags_all": {
              "Name": "dbserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d119a0b0d31fb5a2"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.db_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-08dd8eacfd80c4249",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08dd8eacfd80c4249",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0896b59330b91125f",
            "private_dns": "ip-10-0-5-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-04986dd634f2282c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d119a0b0d31fb5a2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097291f12bc435661",
            "tags": {
              "Name": "dbserver-3"
            },
            "tags_all": {
              "Name": "dbserver-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d119a0b0d31fb5a2"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.db_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "file_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0ebe53808f3439269",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 1500,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0526725e0a604832b",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebe53808f3439269",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b8a761c248f4475",
            "private_dns": "ip-10-0-3-120.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-04c2c250becaf57ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06a5b0302a112f125"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "fileserver-1"
            },
            "tags_all": {
              "Name": "fileserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a5b0302a112f125"
            ]
          },
          "dependencies": [
            "aws_security_group.file_server_sg",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-08eac8763421769df",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 1500,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0d7a869e5920159ac",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08eac8763421769df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bfa2725c9380135a",
            "private_dns": "ip-10-0-4-120.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0ce9f2536140ecffc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06a5b0302a112f125"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea",
            "tags": {
              "Name": "fileserver-2"
            },
            "tags_all": {
              "Name": "fileserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a5b0302a112f125"
            ]
          },
          "dependencies": [
            "aws_security_group.file_server_sg",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_gateway_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0fcbe37fc0a640451",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fcbe37fc0a640451",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0013b230791b1872d",
            "private_dns": "ip-10-0-1-123.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-020d93853f48e538d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00b56171a49acca74"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0636ee283b755af4d",
            "tags": {
              "Name": "natgateway-server"
            },
            "tags_all": {
              "Name": "natgateway-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b56171a49acca74"
            ]
          },
          "dependencies": [
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-071b746c2048500ad",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071b746c2048500ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e6952c0200f44c08",
            "private_dns": "ip-10-0-1-202.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-009eac59dd6f4a609",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00109ad89bfe85ab9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0636ee283b755af4d",
            "tags": {
              "Name": "web_load_balancer"
            },
            "tags_all": {
              "Name": "web_load_balancer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00109ad89bfe85ab9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_load_balancer_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0a793423172f62728",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a793423172f62728",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df90630ebab36f93",
            "private_dns": "ip-10-0-3-80.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0fc36ad54dab99ede",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06d02d95e1b5d8717"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "webserver-1"
            },
            "tags_all": {
              "Name": "webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d02d95e1b5d8717"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server_sg",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0d98b682dba210de7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d98b682dba210de7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b41b6b2345d7aba1",
            "private_dns": "ip-10-0-4-80.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-01e595af2c6537dc1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06d02d95e1b5d8717"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea",
            "tags": {
              "Name": "webserver-2"
            },
            "tags_all": {
              "Name": "webserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d02d95e1b5d8717"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server_sg",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:internet-gateway/igw-098c51d91f2349823",
            "id": "igw-098c51d91f2349823",
            "owner_id": "710623010114",
            "tags": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-igw"
            },
            "tags_all": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-igw"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f988c19c5a1e2e561080289494",
            "instance_id": "i-0fcbe37fc0a640451",
            "instance_owner_id": "710623010114",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0013b230791b1872d",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f988c19c5a1e2e56",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_route_table.private",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-098c51d91f2349823",
            "id": "r-rtb-05446e799d9c2f32a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05446e799d9c2f32a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:route-table/rtb-0f988c19c5a1e2e56",
            "id": "rtb-0f988c19c5a1e2e56",
            "owner_id": "710623010114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-03731f43a11713a94",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-07dbf20a988b96d08",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-private-route-table"
            },
            "tags_all": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:route-table/rtb-05446e799d9c2f32a",
            "id": "rtb-05446e799d9c2f32a",
            "owner_id": "710623010114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098c51d91f2349823",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-public-route-table"
            },
            "tags_all": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b0d5e8e6fdb7226",
            "route_table_id": "rtb-0f988c19c5a1e2e56",
            "subnet_id": "subnet-09c561511973619e9"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064d58b982ad60c67",
            "route_table_id": "rtb-0f988c19c5a1e2e56",
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0568e5556e1bd58af",
            "route_table_id": "rtb-0f988c19c5a1e2e56",
            "subnet_id": "subnet-097291f12bc435661"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029b38b077a91c8ac",
            "route_table_id": "rtb-05446e799d9c2f32a",
            "subnet_id": "subnet-0636ee283b755af4d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df6ccc7325121baf",
            "route_table_id": "rtb-05446e799d9c2f32a",
            "subnet_id": "subnet-05b180d03da0d07b0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0fab8becf4629f344",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fab8becf4629f344",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d21be2957721310"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230404025135585000000004",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0be87f3fdca5373d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be87f3fdca5373d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d21be2957721310"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d02d95e1b5d8717",
                  "sg-0fab8becf4629f344"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2023040402513973160000000b",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-04d21be2957721310",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d21be2957721310",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230404025132378400000001",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_manager_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0e24285a05ccc3883",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e24285a05ccc3883",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d119a0b0d31fb5a2"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d21be2957721310"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-2023040402514189420000000f",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0d119a0b0d31fb5a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d119a0b0d31fb5a2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d21be2957721310"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6033,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d02d95e1b5d8717"
                ],
                "self": true,
                "to_port": 6033
              }
            ],
            "name": "terraform-2023040402513973200000000d",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-00289de2273187b62",
            "description": "Default SG to alllow traffic from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-00289de2273187b62",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "localzone-proj-bkk-default-sg",
            "name_prefix": "",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "localzone-proj-bkk-default-sg"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "file_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-06a5b0302a112f125",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a5b0302a112f125",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04d21be2957721310",
                  "sg-06d02d95e1b5d8717"
                ],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d21be2957721310"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-2023040402513973190000000c",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_gateway_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-00b56171a49acca74",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b56171a49acca74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230404025132380200000002",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-00109ad89bfe85ab9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00109ad89bfe85ab9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d21be2957721310"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230404025135584900000003",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-06d02d95e1b5d8717",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d02d95e1b5d8717",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d21be2957721310"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00109ad89bfe85ab9",
                  "sg-04d21be2957721310"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230404025137661300000007",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-09c561511973619e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c561511973619e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-private-subnet-1"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-private-subnet-1"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-0a5d04a6a1c7ab0ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5d04a6a1c7ab0ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-private-subnet-2"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-private-subnet-2"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-097291f12bc435661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097291f12bc435661",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-private-subnet-3"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-private-subnet-3"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-0636ee283b755af4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0636ee283b755af4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-public-subnet-1"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-public-subnet-1"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-05b180d03da0d07b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b180d03da0d07b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-public-subnet-2"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-public-subnet-2"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:vpc/vpc-08f42dcaa88ce73bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01321b17b552ed1b0",
            "default_route_table_id": "rtb-0b7715374005f3343",
            "default_security_group_id": "sg-0c3572e2b444e7ab1",
            "dhcp_options_id": "dopt-0ac2f15af5797b69f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f42dcaa88ce73bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7715374005f3343",
            "owner_id": "710623010114",
            "tags": {
              "Name": "localzone-proj-bkk-vpc"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-vpc"
            }
          }
        }
      ]
    }
  ]
}